--- a/public/main.html
+++ b/public/main.html
@@ -51,9 +51,15 @@
 
         <!-- Login Button -->
         <div class="login-section">
-            <button class="btn btn-primary" style="background-color: #93BAEE">LOGIN</button>
+            <button id="loginBtn" class="btn btn-primary" style="background-color: #93BAEE">LOGIN</button>
         </div>
     </div>
+
+    <script>
+        document.getElementById("loginBtn").addEventListener("click", function() {
+            window.location.href = "login.html";
+        });
+    </script>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
