--- a/public/login.html
+++ b/public/login.html
@@ -28,10 +28,10 @@
 <body>
     <div class="login-card">
         <h2 class="text-center mb-4">Login</h2>
-        <form>
+        <form action="/login" method="POST">
             <div class="mb-3">
-                <label for="username" class="form-label">Username</label>
-                <input type="text" class="form-control" id="username" placeholder="Enter your username">
+                <label for="email" class="form-label">Email</label>
+                <input type="text" class="form-control" id="email" placeholder="Enter your email">
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Password</label>
